feat: refactor for `alpha4`
- feat: top-level project docs (`AUTHORS`, `CLA`, etc)
- feat: add `CHANGELOG` file
- feat: service loader support for intrinsics
- feat: service loader support for intrinsic providers
= feat: actual security policy
- feat: native jline3 support
- feat: add new `wasm` module with wasi definitions
- feat: submodule for `uuid` and `runtime`
- feat: wrapper upgrade plugin and module
- feat: support for lombok
- feat: support for openrewrite
- feat: initial capnproto schemas
- feat: re-enable support for `atomicfu`
- feat: initialize most of `core` at build time
- feat: project code of conduct
- fix: testing for redakt plugin
- fix: jpms fixes for graalvm dependencies
- fix: stray test classes in reflection metadata
- fix: native image testing for libraries and binaries
- fix: ignore project members for DCO
- fix: all known build warnings
- fix: properly suppress deprecations in `proto` modules
- fix: disable ssg tests which rely on sample project
- chore: adopt embedded kotlin
- chore: adopt assignment syntax
- chore: update all plugins
- chore: update cover → `0.7.3`
- chore: jvm baseline → `17`
- chore: jvm target → `20`
- chore: remove unused build plugins
- chore: suppress unused projects
- chore: update detekt config
- chore: update verification metadata
- chore: update lockfiles
- chore: license headers in most places

Signed-off-by: Sam Gammon <sam@elide.ventures>